# LLMpad

./: .gitattributes  .gitignore  LICENSE  README.md  README.pt-BR.md  index.html  package-lock.json  package.json
models/: llama3.2-fast.Modelfile  phi3-fast.Modelfile
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  conversations.rs  messages.rs  mod.rs  ollama.rs  settings.rs
src/components/: ChatArea.tsx  CopyButton.tsx  Message.tsx  Messages.tsx  ModelDownloaderModal.tsx  ModelManagerModal.tsx  SettingsModal.tsx  Sidebar.tsx  index.ts
src/contexts/: store.tsx
src/utils/: models.ts
